--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -266,7 +266,7 @@ header {
     text-align: center;
     color: #fff;
     background-attachment: scroll;
-    background-image: url(../img/header-bg.jpg);
+    background-image: url(/img/header-bg.jpg);
     background-position: center center;
     background-repeat: none;
     -webkit-background-size: cover;
@@ -346,7 +346,7 @@ section h3.section-subheading {
     }
 }
 
-.service-heading {
+.skills-heading {
     margin: 15px 0;
     text-transform: none;
 }
@@ -629,23 +629,23 @@ section h3.section-subheading {
     }
 }
 
-.team-member {
+.about-member {
     margin-bottom: 50px;
     text-align: center;
 }
 
-.team-member img {
+.about-member img {
     margin: 0 auto;
     border: 7px solid #fff;
 }
 
-.team-member h4 {
+.about-member h4 {
     margin-top: 25px;
     margin-bottom: 0;
     text-transform: none;
 }
 
-.team-member p {
+.about-member p {
     margin-top: 0;
 }
 
@@ -655,7 +655,7 @@ aside.clients img {
 
 section#contact {
     background-color: #222;
-    background-image: url(../img/map-image.png);
+    background-image: url(/img/map-image.png);
     background-position: center;
     background-repeat: no-repeat;
 }
