--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,10 +7,10 @@
     <body id="page-top" class="index">
 
     {% include header.html %}
-    {% include services.html %}
+	{% include about.html %}
+    {% include skills.html %}
     {% include portfolio_grid.html %}
-    {% include about.html %}
-    {% include team.html %}
+    {% include experience.html %}
     {% include clients.html %}
     {% include contact.html %}
     {% include footer.html %}
