--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -16,11 +16,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2009-2011</h4>
-                                    <h4 class="subheading">Our Humble Beginnings</h4>
+                                    <h4>2011</h4>
+                                    <h4 class="subheading">Humble Beginning</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Started to work in Gemalto Singapore as Software Engineer, Responsible of product maintenance, validation, support, enhancement of the OTA Manager - Gemalto's Telco product used for SIM card management - Device handling - Service Management in 2G/3G network. Deployed in many operators around world, e.g.: SFR, Sprint, Orange, Telstra, Verizon Wireless.</p>
                                 </div>
                             </div>
                         </li>
@@ -30,11 +30,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>March 2011</h4>
-                                    <h4 class="subheading">An Agency is Born</h4>
+                                    <h4>January 2012</h4>
+                                    <h4 class="subheading">Integration Project (France)</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Worked on integration project of server application mainly on OTA projects, was stationed in a city in South of France, La Ciotat</p>
                                 </div>
                             </div>
                         </li>
@@ -44,32 +44,19 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
+                                    <h4>April 2014</h4>
+                                    <h4 class="subheading">Transition to Team Lead</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Work as a representative of OTA system projects in Singapore, leading a team of engineers that are part of LTE OTA Solution, building team that are managed 50% geographically in France and Singapore. Main tasks are to study and implement solutions in various projects, support product deployment, train Singapore teams for implementations, and become the solution expertise in Singapore site.</p>
                                 </div>
                             </div>
                         </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/experience/4.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>July 2014</h4>
-                                    <h4 class="subheading">Phase Two Expansion</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
+
                         <li class="timeline-inverted">
                             <div class="timeline-image">
                                 <h4>Be Part
-                                    <br>Of Our
+                                    <br>Of The
                                     <br>Story!</h4>
                             </div>
                         </li>
