--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Skills</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">These are some technical skills (programming, web technologies, application server, databases) that i work with.</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -14,7 +14,7 @@
                         <i class="fa fa-coffee fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="skills-heading">Java / J2EE</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">Worked on this since year 2007, used J2SE since version 1.5 and J2EE since version 1.6.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -22,7 +22,7 @@
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="skills-heading">Python</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">Experience on this programming language since year 2013, mostly used for server installation, administration, Continuous Integration. I also used its alternative version called Jython which combines Java and Python language.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -30,7 +30,7 @@
                         <i class="fa fa-server fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="skills-heading">Oracle Weblogic Server</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">Have worked on this technology since year 2011. I focused alot on the scripting for Weblogic (WLST) to perform automation of installation, tuning profiling, server administration.</p>
                 </div>
             </div>
 			<div class="row text-center">
@@ -40,7 +40,7 @@
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="skills-heading">PHP</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">PHP are my first web technology language, i have been using this technology since 2008, familiar with few frameworks namely : Zend Framework, CodeIgniter. Then some CMS such as : Wordpress, Jekyyl, Sencha.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -48,7 +48,7 @@
                         <i class="fa fa-html5 fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="skills-heading">HTML</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">These are the linguistic backbone of the websites that i developed, have been working on this since 2008. </p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -56,7 +56,7 @@
                         <i class="fa fa-wordpress fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="skills-heading">Wordpress CMS</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">Worked mostly on this CMS to develop e-commerce websites, music store, discounts scrapper sites ever since 2010.</p>
                 </div>
             </div>
 			<div class="row text-center">
@@ -66,7 +66,7 @@
                         <i class="fa fa-database fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="skills-heading">Oracle DB 9-11g / MySQL</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">Some RDBMS technology that i'm familiar with, though i worked mostly using Oracle DB in my professional experience.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -74,7 +74,7 @@
                         <i class="fa fa-linux fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="skills-heading">Linux Redhat</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">This is the web system OS that i use daily for web application development, worked on this since 2011.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -82,7 +82,7 @@
                         <i class="fa fa-sun-o fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="skills-heading">SUN Solaris</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">Another OS used for server web application development, since 2011.</p>
                 </div>
             </div>
         </div>
