--- a/_includes/about.html
+++ b/_includes/about.html
@@ -26,8 +26,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                    <p class="large text-muted">Bachelor of Computer Science with Distinction: Web Systems </p>
+                    <p class="large text-muted">Royal Melbourne Institute of Technology</p>
                 </div>
             </div>
+
         </div>
     </section>
