--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -2,26 +2,20 @@
     <aside class="clients">
         <div class="container">
             <div class="row">
-                <div class="col-md-3 col-sm-6">
+             <div class="row">
+                <div class="col-lg-12 text-center" style="display:inline-block">
+                    <h2 class="section-heading">Honors & Awards</h2>
+            
                     <a href="#">
-                        <img src="img/logos/envato.jpg" class="img-responsive img-centered" alt="">
+                        <img src="img/logos/golden_key.jpg" class="img-responsive img-centered" alt="" style="display:inline-block">
                     </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
+                    <p class="large text-muted" style="display:inline-block">Member of Golden Key International Honor Society – Worldwide Honour society which is invited based on achievement</p>
                     <a href="#">
-                        <img src="img/logos/designmodo.jpg" class="img-responsive img-centered" alt="">
+                        <img src="img/logos/mte2010.jpg" class="img-responsive img-centered" alt="" style="display:inline-block">
                     </a>
+                    <p class="large text-muted" style="display:inline-block">Silver Award at Malaysia Technology Expo 2010 (MTE) for Sport GPS Tracker software (Track the Trek)</p>
                 </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/themeforest.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
+                
             </div>
         </div>
     </aside>
