update footer description

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,10 +14,7 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
-                        <li><a href="#">Privacy Policy</a>
-                        </li>
-                        <li><a href="#">Terms of Use</a>
-                        </li>
+                        <li>Powered by <a href="http://jekyllrb.com">Jekyyl</a>. Designed by Rick Kim </li>
                     </ul>
                 </div>
             </div>
