--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     {% include header.html %}
 	{% include about.html %}
     {% include skills.html %}
-    {% include portfolio_grid.html %}
+    <!--{% include portfolio_grid.html %}-->
     {% include experience.html %}
     {% include clients.html %}
     {% include contact.html %}
