comment out portfolio till good time to showcase

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,9 +24,9 @@
                     <li>
                         <a class="page-scroll" href="#skills">Skills</a>
                     </li>
-                    <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
-                    </li>
+                    <!--<li>-->
+                        <!--<a class="page-scroll" href="#portfolio">Portfolio</a>-->
+                    <!--</li>-->
                     <li>
                         <a class="page-scroll" href="#experience">Experience</a>
                     </li>
