--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,7 +2,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Contact Us</h2>
+                    <h2 class="section-heading">Contact Me</h2>
                     <!--<h3 class="section-subheading text-muted"></h3>-->
                 </div>
             </div>
