update latest experience and skills

--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -45,10 +45,24 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>April 2014</h4>
-                                    <h4 class="subheading">Transition to Team Lead</h4>
+                                    <h4 class="subheading">Team Leader</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Work as a representative of OTA system projects in Singapore, leading a team of engineers that are part of LTE OTA Solution, building team that are managed 50% geographically in France and Singapore. Main tasks are to study and implement solutions in various projects, support product deployment, train Singapore teams for implementations, and become the solution expertise in Singapore site.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/experience/apple_inc.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>September 2015</h4>
+                                    <h4 class="subheading">Joined Apple Inc!</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Took responsibility to become the Senior Software Engineer that contributes to the Apple Ops team by working as a part of team based in San Francisco.</p>
                                 </div>
                             </div>
                         </li>
