--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -73,16 +73,16 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-linux fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="skills-heading">Linux Redhat</h4>
-                    <p class="text-muted">This is the web system OS that i use daily for web application development, worked on this since 2011.</p>
+                    <h4 class="skills-heading">Linux/UNIX</h4>
+                    <p class="text-muted">This is the OS that i use daily for application development/deployment, worked on this since 2011.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-sun-o fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="skills-heading">SUN Solaris</h4>
-                    <p class="text-muted">Another OS used for server web application development, since 2011.</p>
+                    <h4 class="skills-heading">Jenkins DevOps</h4>
+                    <p class="text-muted">Worked on self-developed infrastructure mass deployment(DevOps) to thousands of hosts using this platform, since 2011.</p>
                 </div>
             </div>
         </div>
