--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -62,10 +62,11 @@
                                     <h4 class="subheading">Joined Apple Inc!</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Took responsibility to become the Senior Software Engineer that contributes to the Apple Ops team by working as a part of team based in San Francisco.</p>
+                                    <p class="text-muted">DevOps/Site Reliability Engineering on Apple top security team handling Apple's world facing endpoints. Worked on design/implementation of the deployment/configuration mgmt strategy from scratch, and keep on improving as time goes.</p>
                                 </div>
                             </div>
                         </li>
+                                        
 
                         <li class="timeline-inverted">
                             <div class="timeline-image">
