--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -62,7 +62,7 @@
                                     <h4 class="subheading">Joined Apple Inc!</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">DevOps/Site Reliability Engineering on Apple top security team handling Apple's world facing endpoints. Worked on design/implementation of the deployment/configuration mgmt strategy from scratch, and keep on improving as time goes.</p>
+                                    <p class="text-muted">DevOps/Site Reliability Engineering on Apple top security team handling Apple's world facing endpoints. Worked on design/implementation of the deployment/configuration mgmt strategy from scratch. Worked on many different aspect of SRE/DevOps such as platform monitoring, CI/CD, testing automation, any many more!</p>
                                 </div>
                             </div>
                         </li>
