--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -13,8 +13,8 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-coffee fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="skills-heading">Java / J2EE</h4>
-                    <p class="text-muted">Worked on this since year 2007, used J2SE since version 1.5 and J2EE since version 1.6.</p>
+                    <h4 class="skills-heading">Java</h4>
+                    <p class="text-muted">Mostly used for backend web applications, worked on this since year 2007.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -22,58 +22,59 @@
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="skills-heading">Python</h4>
-                    <p class="text-muted">Experience on this programming language since year 2013, mostly used for server installation, administration, Continuous Integration. I also used its alternative version called Jython which combines Java and Python language.</p>
+                    <p class="text-muted">Experience on this programming language since year 2013, used the high level language for server scripting, installation, administration, Continuous Integration. I also used its alternative version called Jython which combines Java and Python language.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-server fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="skills-heading">Oracle Weblogic Server</h4>
-                    <p class="text-muted">Have worked on this technology since year 2011. I focused alot on the scripting for Weblogic (WLST) to perform automation of installation, tuning profiling, server administration.</p>
-                </div>
+                    <h4 class="skills-heading">Apache Tomcat</h4>
+                    <p class="text-muted">Performance tuning profiling, server administration, logging, integration with Splunk.</p>
+                </div>		    
+
             </div>
-			<div class="row text-center">
+	    <div class="row text-center">
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-server fa-stack-1x fa-inverse"></i>
+                    </span>
+		    <h4 class="skills-heading">Oracle / MySQL</h4>
+                    <p class="text-muted">Handled tuning profiling on Oracle DB, also familiar with Oracle technologies such as GoldenGate, DataGuard.</p>			
+                </div>		    
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="skills-heading">PHP</h4>
-                    <p class="text-muted">PHP are my first web technology language, i have been using this technology since 2008, familiar with few frameworks namely : Zend Framework, CodeIgniter. Then some CMS such as : Wordpress, Jekyyl, Sencha.</p>
+                    <h4 class="skills-heading">Couchbase</h4>
+                    <p class="text-muted">NoSQL Database that i've worked on, i've used it in handling billions of items, so necessarily i've learned the performance tuning/Cross DC data replication/failover.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-html5 fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="skills-heading">HTML</h4>
-                    <p class="text-muted">These are the linguistic backbone of the websites that i developed, have been working on this since 2008. </p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-wordpress fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="skills-heading">Wordpress CMS</h4>
-                    <p class="text-muted">Worked mostly on this CMS to develop e-commerce websites, music store, discounts scrapper sites ever since 2010.</p>
+                    <h4 class="skills-heading">Solr</h4>
+                    <p class="text-muted">NoSQL DB that i've used for data management with it's built-in search engine, basic use for our datalake.</p>
                 </div>
             </div>
-			<div class="row text-center">
+	    <div class="row text-center">
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-database fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="skills-heading">Oracle DB 9-11g / MySQL</h4>
-                    <p class="text-muted">Some RDBMS technology that i'm familiar with, though i worked mostly using Oracle DB in my professional experience.</p>
+                    <h4 class="skills-heading">Oracle Weblogic Server</h4>
+                    <p class="text-muted">I focused alot on the scripting for Weblogic (WLST) to perform automation of installation, tuning profiling, server administration.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-linux fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="skills-heading">Linux/UNIX</h4>
+                    <h4 class="skills-heading">Redhat - Linux/UNIX</h4>
                     <p class="text-muted">This is the OS that i use daily for application development/deployment, worked on this since 2011.</p>
                 </div>
                 <div class="col-md-4">
@@ -81,8 +82,8 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-sun-o fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="skills-heading">Jenkins DevOps</h4>
-                    <p class="text-muted">Worked on self-developed infrastructure mass deployment(DevOps) to thousands of hosts using this platform, since 2011.</p>
+                    <h4 class="skills-heading">Jenkins</h4>
+                    <p class="text-muted">Worked on building up infrastructure mass deployment(DevOps) from scratch, integration with Vault secret management, BlueOcean for CI/CD Pipeline.</p>
                 </div>
             </div>
         </div>
