--- a/_includes/about.html
+++ b/_includes/about.html
@@ -23,13 +23,22 @@
                     </div>
                 </div>
                 {% endfor %}
-            </div>
+            </div>            
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <p class="large text-muted">Senior Site Reliability Engineer at Apple</p>
+                </div>
+            </div>            
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <p class="large text-muted">Bachelor of Computer Science with Distinction: Web Systems </p>
-                    <p class="large text-muted">Royal Melbourne Institute of Technology</p>
+                    <p class="large text-muted">Royal Melbourne Institute of Technology</p>                   
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <p class="large text-muted">I am a multidisciplinary engineer with expertise in development and implementation in automated builds, deployment pipelines and scaling workflows to handle huge number of hosts in multiple Datacenters. In the same time i’m  the Site Reliability of Apple services serving massive world facing requests.</p>
+                </div>
+            </div>
         </div>
     </section>
