--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -13,8 +13,8 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-coffee fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="skills-heading">Java</h4>
-                    <p class="text-muted">Mostly used for backend web applications, worked on this since year 2007.</p>
+                    <h4 class="skills-heading">Java/Groovy</h4>
+                    <p class="text-muted">Mostly used for backend web applications, Groovy mostly for interacting with Jenkins API,  worked on this since year 2007.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -29,8 +29,8 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-server fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="skills-heading">Apache Tomcat</h4>
-                    <p class="text-muted">Performance tuning profiling, server administration, logging, integration with Splunk.</p>
+                    <h4 class="skills-heading">Jenkins</h4>
+                    <p class="text-muted">Worked on building up infrastructure mass deployment(DevOps) from scratch, integration with Vault secret management, BlueOcean for CI/CD Pipeline.</p>
                 </div>		    
 
             </div>
@@ -82,8 +82,8 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-sun-o fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="skills-heading">Jenkins</h4>
-                    <p class="text-muted">Worked on building up infrastructure mass deployment(DevOps) from scratch, integration with Vault secret management, BlueOcean for CI/CD Pipeline.</p>
+                    <h4 class="skills-heading">Apache Tomcat</h4>
+                    <p class="text-muted">Performance tuning profiling, server administration, logging, integration with Splunk.</p>			
                 </div>
             </div>
         </div>
