--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -38,7 +38,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-server fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-database fa-stack-1x fa-inverse"></i>
                     </span>
 		    <h4 class="skills-heading">Oracle / MySQL</h4>
                     <p class="text-muted">Handled tuning profiling on Oracle DB, also familiar with Oracle technologies such as GoldenGate, DataGuard.</p>			
@@ -54,7 +54,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-html5 fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-database fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="skills-heading">Solr</h4>
                     <p class="text-muted">NoSQL DB that i've used for data management with it's built-in search engine, basic use for our datalake.</p>
